--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "install": "^0.13.0",
     "mongodb": "^4.6.0",
     "nodemon": "^2.0.16",
     "thingspeakclient": "^0.4.0"
